fix: Enter long punctuation mark texarea-item without wrap

--- a/components/textarea-item/style/index.less
+++ b/components/textarea-item/style/index.less
@@ -97,7 +97,7 @@
     overflow: visible;
     display: block;
     resize: none;
-    word-break: break-all;
+    word-break: break-word;
     word-wrap: break-word;
 
     &::placeholder {
